<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="profile_title">Профиль</string>
    <string name="profile_support">Написать в поддержку</string>
    <string name="profile_settings">Настройки</string>
    <string name="profile_logout">Выйти из аккаунта</string>
    <string name="profile_your_courses">Ваши курсы</string>

    <string name="profile_menu_arrow_content_description">Перейти</string>
    <string name="profile_course_image_content_description">Изображение курса</string>
    <string name="profile_rating_star_content_description">Рейтинг курса</string>
    <string name="profile_bookmark_circle_content_description">Избранное</string>
    <string name="profile_bookmark_icon_content_description">Курс в избранном</string>

    <string name="error_load_courses">Ошибка загрузки курсов</string>
    <string name="error_toggle_favorite">Ошибка обновления избранного</string>

    <string name="lessons_22_44">22/44 уроков</string>
    <string name="lessons_15_48">15/48 уроков</string>
    <string name="lessons_28_40">28/40 уроков</string>
    <string name="lessons_4_40">4/40 уроков</string>
    <string name="lessons_8_40">8/40 уроков</string>

</resources>