<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile_screen_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profileTitleTextView"
            style="@style/profile_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/profile_screen_padding_horizontal"
            android:layout_marginTop="@dimen/profile_title_margin_top"
            android:text="@string/profile_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_menu_height"
            android:layout_marginStart="@dimen/profile_screen_padding_horizontal"
            android:layout_marginTop="@dimen/profile_menu_margin_top"
            android:layout_marginEnd="@dimen/profile_screen_padding_horizontal"
            android:background="@drawable/bg_profile_menu"
            android:orientation="vertical"
            android:paddingStart="@dimen/profile_menu_padding_horizontal"
            android:paddingTop="@dimen/profile_menu_padding_vertical"
            android:paddingEnd="@dimen/profile_menu_padding_horizontal"
            android:paddingBottom="@dimen/profile_menu_padding_vertical">

            <LinearLayout
                android:id="@+id/supportContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_menu_item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/supportTextView"
                    style="@style/profile_text_menu_item"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/profile_support" />

                <ImageView
                    android:layout_width="@dimen/profile_arrow_size"
                    android:layout_height="@dimen/profile_arrow_size"
                    android:contentDescription="@string/profile_menu_arrow_content_description"
                    android:src="@drawable/ic_arrow_24" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_divider_height"
                android:background="@drawable/bg_profile_divider" />

            <LinearLayout
                android:id="@+id/settingsContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_menu_item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/settingsTextView"
                    style="@style/profile_text_menu_item"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/profile_settings" />

                <ImageView
                    android:layout_width="@dimen/profile_arrow_size"
                    android:layout_height="@dimen/profile_arrow_size"
                    android:contentDescription="@string/profile_menu_arrow_content_description"
                    android:src="@drawable/ic_arrow_24" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_divider_height"
                android:background="@drawable/bg_profile_divider" />

            <LinearLayout
                android:id="@+id/logoutContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_menu_item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/logoutTextView"
                    style="@style/profile_text_menu_item"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/profile_logout" />

                <ImageView
                    android:layout_width="@dimen/profile_arrow_size"
                    android:layout_height="@dimen/profile_arrow_size"
                    android:contentDescription="@string/profile_menu_arrow_content_description"
                    android:src="@drawable/ic_arrow_24" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/yourCoursesTitleTextView"
            style="@style/profile_text_section_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/profile_screen_padding_horizontal"
            android:layout_marginTop="@dimen/profile_section_margin_top"
            android:text="@string/profile_your_courses" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profileCoursesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/profile_list_margin_top"
            android:clipToPadding="false"
            android:paddingStart="@dimen/profile_screen_padding_horizontal"
            android:paddingEnd="@dimen/profile_screen_padding_horizontal"
            android:paddingBottom="@dimen/profile_list_padding_bottom"
            android:importantForAccessibility="no"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/profileProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@android:color/holo_blue_light"
        android:visibility="gone" />

</FrameLayout>
