<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/profile_card_height"
    android:layout_marginBottom="@dimen/profile_card_margin_bottom"
    android:background="@drawable/bg_profile_course_card"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_image_height">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_image_height"
            android:background="@drawable/bg_profile_course_image_rounded"
            android:clipToOutline="true">

            <com.example.coursesapp.feature_main.presentation.view.TopCropImageView
                android:id="@+id/courseImageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_image_height"
                android:contentDescription="@string/profile_course_image_content_description"
                tools:src="@drawable/ic_cover2" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginStart="@dimen/profile_badges_margin_start"
            android:layout_marginBottom="@dimen/profile_badges_margin_bottom"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ratingBadgeContainer"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/profile_badge_height"
                android:background="@drawable/bg_profile_badge"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/profile_badge_padding_horizontal"
                android:paddingTop="@dimen/profile_badge_padding_vertical"
                android:paddingEnd="@dimen/profile_badge_padding_horizontal"
                android:paddingBottom="@dimen/profile_badge_padding_vertical">

                <ImageView
                    android:id="@+id/rateStarImageView"
                    android:layout_width="@dimen/profile_star_size"
                    android:layout_height="@dimen/profile_star_size"
                    android:contentDescription="@string/profile_rating_star_content_description"
                    android:src="@drawable/ic_green_star" />

                <TextView
                    android:id="@+id/rateTextView"
                    style="@style/profile_text_course_meta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profile_meta_spacing_small"
                    android:text="3.9" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dateBadgeContainer"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/profile_badge_height"
                android:layout_marginStart="@dimen/profile_badge_spacing"
                android:background="@drawable/bg_profile_badge"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/profile_badge_padding_horizontal"
                android:paddingTop="@dimen/profile_badge_padding_vertical"
                android:paddingEnd="@dimen/profile_badge_padding_horizontal"
                android:paddingBottom="@dimen/profile_badge_padding_vertical">

                <TextView
                    android:id="@+id/dateTextView"
                    style="@style/profile_text_course_meta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10 Сентября 2024" />
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="@dimen/profile_bookmark_circle_size"
            android:layout_height="@dimen/profile_bookmark_circle_size"
            android:layout_gravity="top|end"
            android:layout_marginTop="@dimen/profile_bookmark_margin"
            android:layout_marginEnd="@dimen/profile_bookmark_margin">

            <ImageView
                android:layout_width="@dimen/profile_bookmark_circle_size"
                android:layout_height="@dimen/profile_bookmark_circle_size"
                android:contentDescription="@string/profile_bookmark_circle_content_description"
                android:src="@drawable/ic_profile_bookmark_circle" />

            <ImageView
                android:id="@+id/favoriteImageView"
                android:layout_width="@dimen/profile_bookmark_icon_width"
                android:layout_height="@dimen/profile_bookmark_icon_height"
                android:layout_gravity="center"
                android:contentDescription="@string/profile_bookmark_icon_content_description"
                android:src="@drawable/ic_bookmark_green" />
        </FrameLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_content_height"
        android:orientation="vertical"
        android:paddingStart="@dimen/profile_content_padding"
        android:paddingTop="@dimen/profile_content_padding"
        android:paddingEnd="@dimen/profile_content_padding"
        android:paddingBottom="@dimen/profile_content_padding">

        <TextView
            android:id="@+id/titleTextView"
            style="@style/profile_text_course_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="3D-дженералист" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_progress_row_margin_top"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/progressPercentTextView"
                style="@style/profile_text_progress_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="50%" />

            <TextView
                android:id="@+id/progressLessonsTextView"
                style="@style/profile_text_progress_right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                tools:text="22/44 уроков" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_progress_bar_height"
            android:layout_marginTop="@dimen/profile_progress_bar_margin_top"
            android:max="100"
            android:progress="50"
            android:progressDrawable="@drawable/progress_profile_horizontal" />
    </LinearLayout>

</LinearLayout>